<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    tools:context=".SubmitActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="103dp"
        android:gravity="center_vertical"
        android:minHeight="?attr/actionBarSize"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:theme="@style/Theme.AppCompat">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_back"
            android:contentDescription="@string/back"
            android:padding="10dp"
            android:src="@drawable/ic_arrow_back"
            android:tint="@android:color/white" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="44dp"
            android:layout_weight="1"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/gads_logo" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="62dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="5dp"
        android:gravity="center_horizontal"
        android:text="@string/submission_title"
        android:textColor="#ffae45"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/gradient_line"
        android:src="@drawable/gradient_line" />


    <include layout="@layout/content_submit" />

</LinearLayout>
