<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/submit_form"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>


    <EditText
        android:id="@+id/first_name"
        android:layout_width="184dp"
        android:layout_height="47dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/first_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.213" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="184dp"
        android:layout_height="47dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/last_name"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.903"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <EditText
        android:id="@+id/email"
        android:layout_width="371dp"
        android:layout_height="47dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/github"
        android:layout_width="371dp"
        android:layout_height="47dp"
        android:background="@drawable/edit_text"
        android:ems="10"
        android:fadingEdge="horizontal|vertical"
        android:hint="@string/github"
        android:importantForAutofill="no"
        android:inputType="text"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.606" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:indeterminateTintMode="src_atop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <Button
        android:id="@+id/submit_form_btn"
        android:layout_width="159dp"
        android:layout_height="47dp"
        android:background="@drawable/btn"
        android:backgroundTint="#ffae45"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.802" />

</androidx.constraintlayout.widget.ConstraintLayout>