<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/learner_card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="24dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/hour"
                android:layout_width="235dp"
                android:layout_height="54dp"
                android:text="@string/learner_info"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                app:layout_constraintEnd_toEndOf="@+id/learners_name"
                app:layout_constraintStart_toEndOf="@+id/learnersBadge"
                app:layout_constraintTop_toBottomOf="@+id/learners_name" />

            <ImageView
                android:id="@+id/learnersBadge"
                android:layout_width="113dp"
                android:layout_height="82dp"
                android:layout_marginTop="1dp"
                android:contentDescription="@string/learner_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/hour"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.483"
                app:srcCompat="@drawable/toplearner" />

            <TextView
                android:id="@+id/learners_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="1dp"
                android:text="@string/learner_name"
                android:textColor="#0B0A0A"
                android:textColorHighlight="#100F0F"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/hour"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/learnersBadge"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</FrameLayout>